--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,16 @@
-name: Test123
+name: Github Actions Test
 on: [push]
 jobs:
   Test1:
-    runs-on: ubuntu-latest
+    runs-on: test-self-hosted
     steps:
-      - run: echo "xd"
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          file: Dockerfile
+          push: true
+          tags: user/app:latest
