--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           file: Dockerfile
-          push: true
+          push: false
           tags: user/app:latest
